--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ before_install:
   - sudo apt-get update -qq
 install:
   - sudo apt-get install -qq rust-nightly cargo
+  - sudo apt-get install -qq premake4
 script:
   - cargo build
