--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ before_install:
   - sudo add-apt-repository --yes ppa:cmrx64/cargo
   - sudo apt-get update -qq
 install:
-  - sudo apt-get install -qq rust-nightly cargo premake4
+  - sudo apt-get install -qq rust-nightly cargo premake
 script:
   - cargo build
