--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,13 @@ install:
   - sudo apt-get install -qq premake4
   - sudo apt-get install libXxf86vm-dev
 script:
-  - mkdir deps
-  - cd deps
-  # Install glfw lib
-  - git clone --depth=1 https://github.com/glfw/glfw.git
+  # glfw
+  - git clone https://github.com/glfw/glfw.git
   - cd glfw
-  - cmake -DBUILD_SHARED_LIBS=ON
-  - make glfw # build only .so files
+  - git checkout 3.0.3
+  - cmake -DBUILD_SHARED_LIBS=ON .
+  - make
   - sudo make install
-  #- cp src/libglfw.so* .. # copy dynamic libraries
   - cd ..
+
   - cargo build
