--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "nanovg"
 version = "0.2.0"
 authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
-build = "make -f nanovg.mk"
+build = "build.rs"
 
 [lib]
 name = "nanovg"
