--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "nanovg"
 version = "0.2.0"
 authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
 build = "build.rs"
+links = "nanovg shim"
 
 [lib]
 name = "nanovg"
