--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - sudo apt-get update -qq
 install:
   #- sudo apt-get install -qq rust-nightly cargo
-  - sudo apt-get install -qq premake4
+  - sudo apt-get install -qq --force-yes premake4
   - sudo apt-get install libXxf86vm-dev
 script:
   # glfw
