--- a/examples/demo/Cargo.toml
+++ b/examples/demo/Cargo.toml
@@ -11,8 +11,8 @@ path = "src/main.rs"
 version = "*"
 
 [dependencies.nanovg]
-#git = "https://github.com/KevinKelley/nanovg-rs"
 path = "../.."
+features = ["gl3"]
 
 [dependencies.glfw]
 git = "https://github.com/bjz/glfw-rs"
