--- a/examples/demo/Cargo.toml
+++ b/examples/demo/Cargo.toml
@@ -19,3 +19,6 @@ git = "https://github.com/bjz/glfw-rs"
 
 [dependencies.gl]
 git = "https://github.com/bjz/gl-rs"
+
+[dependencies.png]
+git = "https://github.com/servo/rust-png"
