--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nanovg"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
 build = "build.rs"
 
@@ -15,7 +15,15 @@ gles3 = []
 
 [dependencies]
 libc = "*"
-bitflags = "0.2"
+bitflags = "1.0"
 
 [build-dependencies]
 gcc = "0.3"
+
+[dev-dependencies]
+glutin = "0.10.0"
+gl = "0.6.3"
+
+[[example]]
+name = "demo-glutin"
+required-features = ["gl3"]
