--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "nanovg"
 version = "0.4.0"
 authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
 build = "build.rs"
+readme = "README.md"
 
 [lib]
 name = "nanovg"
