trying to figure why travis is failing

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 install:
   #- sudo apt-get install -qq rust-nightly cargo
   - sudo apt-get install -qq --force-yes premake4
-  - sudo apt-get install libXxf86vm-dev
+  #- sudo apt-get install libXxf86vm-dev
 script:
   # glfw
   - git clone https://github.com/glfw/glfw.git
