trying to figure why travis is failing

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
   #- sudo apt-get install -qq rust-nightly cargo
   - sudo apt-get install -qq --force-yes premake4
   #- sudo apt-get install libXxf86vm-dev
+  - sudo apt-get install xorg-dev libglu1-mesa-dev
 script:
   # glfw
   - git clone https://github.com/glfw/glfw.git
