--- a/.travis.yml
+++ b/.travis.yml
@@ -7,23 +7,20 @@ matrix:
     - rust: nightly
 
 before_install:
-  #- sudo add-apt-repository --yes ppa:hansjorg/rust
-  #- sudo add-apt-repository --yes ppa:cmrx64/cargo
   - sudo add-apt-repository --yes ppa:codegear/release
   - sudo apt-get update -qq
 install:
-  #- sudo apt-get install -qq rust-nightly cargo
   - sudo apt-get install -qq --force-yes premake4
-  #- sudo apt-get install libXxf86vm-dev
-  - sudo apt-get install xorg-dev libglu1-mesa-dev
+  # - sudo apt-get install xorg-dev libglu1-mesa-dev
+  - sudo apt-get install xorg-dev xrandr-dev
 script:
   # glfw
-  - git clone https://github.com/glfw/glfw.git
-  - cd glfw
-  - git checkout 3.0.3
-  - cmake -DBUILD_SHARED_LIBS=ON .
-  - make
-  - sudo make install
-  - cd ..
+  # - git clone https://github.com/glfw/glfw.git
+  # - cd glfw
+  # - git checkout 3.0.3
+  # - cmake -DBUILD_SHARED_LIBS=ON .
+  # - make
+  # - sudo make install
+  # - cd ..
 
   - cargo build --features "gl3"
