Reimplement widgets'n stuff demo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ gcc = "0.3"
 glutin = "0.10.0"
 gl = "0.6.3"
 chrono = "0.4"
+rand = "0.4"
 
 [[example]]
 name = "demo-glutin"
@@ -38,4 +39,8 @@ required-features = ["gl3"]
 
 [[example]]
 name = "demo-clock"
+required-features = ["gl3"]
+
+[[example]]
+name = "demo-ui"
 required-features = ["gl3"]
