Add demo showing how to use Transform on text
This demo show how to transform and draw text in different coordinate
space.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,3 +49,7 @@ required-features = ["gl3"]
 [[example]]
 name = "demo-cutout"
 required-features = ["gl3"]
+
+[[example]]
+name = "demo-text"
+required-features = ["gl3"]
