--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,6 @@
 name = "nanovg"
 version = "0.4.0"
 authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
-build = "build.rs"
 readme = "README.md"
 description = "Idiomatic bindings to the NanoVG library"
 homepage = "https://github.com/KevinKelley/nanovg-rs"
@@ -15,16 +14,13 @@ license = "MIT/Zlib"
 name = "nanovg"
 
 [features]
-gl2 = []
-gl3 = []
-gles2 = []
-gles3 = []
+gl2 = ["nanovg-sys/gl2"]
+gl3 = ["nanovg-sys/gl3"]
+gles2 = ["nanovg-sys/gles2"]
+gles3 = ["nanovg-sys/gles3"]
 
 [dependencies]
-bitflags = "1.0"
-
-[build-dependencies]
-cc = "1.0"
+nanovg-sys = { path = "nanovg-sys", version = "0.1.0" }
 
 [dev-dependencies]
 glutin = "0.13.0"
