--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,7 @@ required-features = ["gl3"]
 [[example]]
 name = "demo-transform"
 required-features = ["gl3"]
+
+[[example]]
+name = "demo-paint-trait"
+required-features = ["gl3"]
