--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ gl2 = ["nanovg-sys/gl2"]
 gl3 = ["nanovg-sys/gl3"]
 gles2 = ["nanovg-sys/gles2"]
 gles3 = ["nanovg-sys/gles3"]
+default = ["gl3"]
 
 [dependencies]
 nanovg-sys = { path = "nanovg-sys", version = "0.1.0" }
