need sub-features, and default, both...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nanovg"
-version = "0.4.1"
+version = "0.4.1.1"
 authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
 readme = "README.md"
 description = "Idiomatic bindings to the NanoVG library"
@@ -14,14 +14,14 @@ license = "MIT/Zlib"
 name = "nanovg"
 
 [features]
-gl2 = []
-gl3 = []
-gles2 = []
-gles3 = []
+gl2 = ["nanovg-sys/gl2"]
+gl3 = ["nanovg-sys/gl3"]
+gles2 = ["nanovg-sys/gles2"]
+gles3 = ["nanovg-sys/gles3"]
 default = ["gl3"]
 
 [dependencies]
-nanovg-sys = { path = "nanovg-sys", version = "0.1.0" }
+nanovg-sys = { path = "nanovg-sys", version = "0.1.*" }
 
 [dev-dependencies]
 glutin = "0.13.0"
