Up sys ver to 1.0.0; Remove ver in Cargo.toml
- Bump nanovg-sys version to 1.0.0 bacause it can be considered "finished",
since it binds and exports all of the nanovg C API.
- Remove the version specification for the nanovg-sys dependency in the main crate.
There is no need to specifiy the version. The main crate should always be using the
most recent version anyway.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ gles3 = ["nanovg-sys/gles3"]
 default = ["gl3"]
 
 [dependencies]
-nanovg-sys = { path = "nanovg-sys", version = "0.1.*" }
+nanovg-sys = { path = "nanovg-sys" }
 
 [dev-dependencies]
 glutin = "0.13.0"
