--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ gles3 = ["nanovg-sys/gles3"]
 default = ["gl3"]
 
 [dependencies]
-nanovg-sys = { path = "nanovg-sys" }
+nanovg-sys = { path = "nanovg-sys", version = "1.0.0" }
 
 [dev-dependencies]
 glutin = "0.13.0"
