--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,9 @@ gl2 = ["nanovg-sys/gl2"]
 gl3 = ["nanovg-sys/gl3"]
 gles2 = ["nanovg-sys/gles2"]
 gles3 = ["nanovg-sys/gles3"]
-default = ["gl3"]
 
 [dependencies]
-nanovg-sys = { path = "nanovg-sys", version = "0.1.2" }
+nanovg-sys = { path = "nanovg-sys", version = "0.1.2", default-features = false }
 
 [dev-dependencies]
 glutin = "0.13.0"
